# houseprice-iitp-masai-cohort-1

./: .gitignore  ISSUES.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
data/: sample_houses.csv
model/: model.joblib  train.py
