[project]
name = "houseprice-iitp-masai"
version = "0.1.0"
description = "House Price Predictor — Streamlit anchor app for AIM Session 13.1."
readme = "README.md"
requires-python = ">=3.11"

# BUG #5 — scikit-learn pinned to a very old version.
# A model.joblib trained with current sklearn will fail to load cleanly here.
# Filed as Issue #5 in ISSUES.md.
dependencies = [
    "streamlit>=1.30",
    "scikit-learn==1.0.2",
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
